# 12_Steps_to_Navier_Stokes

./: pyproject.toml
lessons/: 00_Quick_Python_Intro.ipynb  01_Step_1.ipynb
solutions/: 01_Step01-improved.ipynb  01_Step01.ipynb  01_Step01.py
