[tool.poetry]
name = "cfdpython"
version = "0.1.0"
description = ""
authors = ["xz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
notebook = "^7.0.7"
numpy = "^1.26.3"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
sympy = "^1.12"
jupyterthemes = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
